--- a/pages/4437.html
+++ b/pages/4437.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -498,7 +497,7 @@ margin-left: 0em;
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Theta-space'>Theta-space</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/infinity-category'>∞-category</a>/<a class='existingWikiWord' href='/nlab/show/omega-category'>ω-category</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/infinity-category'>∞-category</a>/<a class='existingWikiWord' href='/nlab/show/infinity-category'>∞-category</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-category'>(∞,n)-category</a>
 <ul>
@@ -544,9 +543,9 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/0-category'>0-category</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/%28-1%29-category'>(−1)-category</a></li>
+<li><span class='newWikiWord'>(?1)-category<a href='/nlab/new/%28%3F1%29-category'>?</a></span></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/%28-2%29-category'>(−2)-category</a></li>
+<li><span class='newWikiWord'>(?2)-category<a href='/nlab/new/%28%3F2%29-category'>?</a></span></li>
 </ul>
 </li>
 
@@ -574,7 +573,7 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/quasi-category'>quasi-category</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/simplicial+model+for+weak+omega-categories'>simplicial model for weak ω-categories</a>
+<li><span class='newWikiWord'>simplicial model for weak ∞-categories<a href='/nlab/new/simplicial+model+for+weak+%E2%88%9E-categories'>?</a></span>
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/complicial+set'>complicial set</a></li>
 
@@ -594,11 +593,11 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/tetracategory'>tetracategory</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/strict+omega-category'>strict ω-category</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/strict+n-category'>strict ∞-category</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Batanin+omega-category'>Batanin ω-category</a></li>
+<li><span class='newWikiWord'>Batanin ∞-category<a href='/nlab/new/Batanin+%E2%88%9E-category'>?</a></span></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Trimble+n-category'>Trimble ω-category</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/Trimble+n-category'>Trimble ∞-category</a></li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Grothendieck-Maltsiniotis+infinity-category'>Grothendieck-Maltsiniotis ∞-categories</a></li>
 </ul>
@@ -708,11 +707,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/effective+epimorphism'>effective epimorphism</a> <math class='maruku-mathml' display='inline' id='mathml_51a5e51100a7fb30929aeab337db1cdbfb62da00_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇒</mo></mrow><annotation encoding='application/x-tex'>\Rightarrow</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/regular+epimorphism'>regular epimorphism</a> <math class='maruku-mathml' display='inline' id='mathml_51a5e51100a7fb30929aeab337db1cdbfb62da00_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇔</mo></mrow><annotation encoding='application/x-tex'>\Leftrightarrow</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/covering'>covering</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/effective+epimorphism'>effective epimorphism</a> <math class='maruku-mathml' display='inline' id='mathml_043d60a29d99611b00e98e9f29c9710309ca809d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇒</mo></mrow><annotation encoding='application/x-tex'>\Rightarrow</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/regular+epimorphism'>regular epimorphism</a> <math class='maruku-mathml' display='inline' id='mathml_043d60a29d99611b00e98e9f29c9710309ca809d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇔</mo></mrow><annotation encoding='application/x-tex'>\Leftrightarrow</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/covering'>covering</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/effective+monomorphism'>effective monomorphism</a> <math class='maruku-mathml' display='inline' id='mathml_51a5e51100a7fb30929aeab337db1cdbfb62da00_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇒</mo></mrow><annotation encoding='application/x-tex'>\Rightarrow</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/regular+monomorphism'>regular monomorphism</a> <math class='maruku-mathml' display='inline' id='mathml_51a5e51100a7fb30929aeab337db1cdbfb62da00_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇔</mo></mrow><annotation encoding='application/x-tex'>\Leftrightarrow</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/embedding'>embedding</a> .</p>
+<p><a class='existingWikiWord' href='/nlab/show/effective+monomorphism'>effective monomorphism</a> <math class='maruku-mathml' display='inline' id='mathml_043d60a29d99611b00e98e9f29c9710309ca809d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇒</mo></mrow><annotation encoding='application/x-tex'>\Rightarrow</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/regular+monomorphism'>regular monomorphism</a> <math class='maruku-mathml' display='inline' id='mathml_043d60a29d99611b00e98e9f29c9710309ca809d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇔</mo></mrow><annotation encoding='application/x-tex'>\Leftrightarrow</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/embedding'>embedding</a> .</p>
 </li>
 </ul>
 
@@ -722,22 +721,27 @@ margin-left: 0em;
 
 <p>
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on October  6, 2012 00:02:50 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.8)
+  <p>
+  Last revised on July  5, 2018 at 04:17:33.
+  See the <a href="https://ncatlab.org/nlab/history/covering" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/covering" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/covering/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/covering" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/covering" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/covering" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/covering/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/covering" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/covering" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/covering/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/covering" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/covering" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/covering" id="view_source" rel="nofollow">Source</a>
