--- a/pages/8167.html
+++ b/pages/8167.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -771,7 +770,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -942,6 +941,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/quark'>quark</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/top+quark'>top quark</a></li>
+</ul>
 </li>
 
 <li>
@@ -1085,22 +1088,29 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Steven+Weinberg'>Steven Weinberg</a>, Phys. Rev. D 26, 287 (1982)</p>
 </li>
 </ul>
+
+<p>A <a class='existingWikiWord' href='/nlab/show/geometric+engineering+of+quantum+field+theory'>geometric engineering</a> of the MSSM in <a class='existingWikiWord' href='/nlab/show/F-theory'>F-theory</a> (see at <a class='existingWikiWord' href='/nlab/show/string+phenomenology'>string phenomenology</a>) is claimed in</p>
+
+<ul>
+<li id='CLLO18'><a class='existingWikiWord' href='/nlab/show/Mirjam+Cveti%C4%8D'>Mirjam Cvetič</a>, Ling Lin, Muyang Liu, Paul-Konstantin Oehlmann, <em>An F-theory Realization of the Chiral MSSM with <math class='maruku-mathml' display='inline' id='mathml_d054d5e22306c79c48a5b45bca6b6cb568d8844a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>ℤ</mi> <mn>2</mn></msub></mrow><annotation encoding='application/x-tex'>\mathbb{Z}_2</annotation></semantics></math>-Parity</em> (<a href='https://arxiv.org/abs/1807.01320'>arXiv:1807.01320</a>)</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Revised on February 24, 2018 15:06:52 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (91.230.41.202)
+  <p>
+  Last revised on July  5, 2018 at 04:46:27.
+  See the <a href="https://ncatlab.org/nlab/history/MSSM" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/MSSM" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/MSSM/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/MSSM" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/MSSM" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/MSSM" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/MSSM/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/MSSM" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/MSSM" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/MSSM/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/MSSM" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/MSSM" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/MSSM" id="view_source" rel="nofollow">Source</a>
