--- a/pages/10388.html
+++ b/pages/10388.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -423,7 +422,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Beilinson-Bernstein+localization'>Beĭlinson-Bernstein localization</a></p>
+<p><span class='newWikiWord'>Be?linson-Bernstein localization<a href='/nlab/new/Be%3Flinson-Bernstein+localization'>?</a></span></p>
 </li>
 
 <li>
@@ -446,24 +445,44 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Given a <a class='existingWikiWord' href='/nlab/show/structure'>structure</a> on some <a class='existingWikiWord' href='/nlab/show/space'>space</a> <math class='maruku-mathml' display='inline' id='mathml_3cd44a7d4cd36f824a76b6da6fbc2ce625065275_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> which is equipped with the <a class='existingWikiWord' href='/nlab/show/action'>action</a> of a <a class='existingWikiWord' href='/nlab/show/group'>group</a> <math class='maruku-mathml' display='inline' id='mathml_3cd44a7d4cd36f824a76b6da6fbc2ce625065275_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>, then a lift to a <em>equivariant structure</em> is an extension/<a class='existingWikiWord' href='/nlab/show/descent'>descent</a> to the <a class='existingWikiWord' href='/nlab/show/action+groupoid'>action groupoid</a> <math class='maruku-mathml' display='inline' id='mathml_3cd44a7d4cd36f824a76b6da6fbc2ce625065275_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo stretchy='false'>/</mo><mo stretchy='false'>/</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>X//G</annotation></semantics></math>.</p>
+<p>Given a <a class='existingWikiWord' href='/nlab/show/structure'>structure</a> on some <a class='existingWikiWord' href='/nlab/show/space'>space</a> <math class='maruku-mathml' display='inline' id='mathml_262774060dc69b89bcbb865070f56f847552ca20_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> which is equipped with the <a class='existingWikiWord' href='/nlab/show/action'>action</a> of a <a class='existingWikiWord' href='/nlab/show/group'>group</a> <math class='maruku-mathml' display='inline' id='mathml_262774060dc69b89bcbb865070f56f847552ca20_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>, then a lift to a <em>equivariant structure</em> is an extension/<a class='existingWikiWord' href='/nlab/show/descent'>descent</a> to the <a class='existingWikiWord' href='/nlab/show/action+groupoid'>action groupoid</a> <math class='maruku-mathml' display='inline' id='mathml_262774060dc69b89bcbb865070f56f847552ca20_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo stretchy='false'>/</mo><mo stretchy='false'>/</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>X//G</annotation></semantics></math>.</p>
 
 <h2 id='examples'>Examples</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/equivariant+bundle'>equivariant bundle</a>, <a class='existingWikiWord' href='/nlab/show/equivariant+connection'>equivariant connection</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/equivariant+cohomology'>equivariant cohomology</a></p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/equivariant+bundle'>equivariant bundle</a>, <a class='existingWikiWord' href='/nlab/show/equivariant+connection'>equivariant connection</a></li>
 </ul>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/equivariance'>equivariance</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/equivariance'>equivariance</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/general+covariance'>general covariance</a>, <a class='existingWikiWord' href='/nlab/show/gauge+invariance'>gauge invariance</a>, <a class='existingWikiWord' href='/nlab/show/principle+of+equivalence'>principle of equivalence</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/equivariant+cohomology'>equivariant cohomology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/equivariant+homotopy+theory'>equivariant homotopy theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/equivariant+stable+homotopy+theory'>equivariant stable homotopy theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/global+equivariant+stable+homotopy+theory'>global equivariant stable homotopy theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/rational+equivariant+stable+homotopy+theory'>rational equivariant stable homotopy theory</a></p>
+</li>
 </ul>
 
 <p>
@@ -471,19 +490,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on September 16, 2013 01:03:34 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.122)
+  <p>
+  Last revised on July  5, 2018 at 08:53:37.
+  See the <a href="https://ncatlab.org/nlab/history/equivariant structure" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+structure" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/equivariant+structure" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+structure/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/equivariant+structure" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+structure" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/equivariant structure/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/equivariant+structure" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/equivariant+structure" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/equivariant+structure" id="view_source" rel="nofollow">Source</a>
