--- a/pages/3839.html
+++ b/pages/3839.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/1082/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,7 +311,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Daniel+Dugger'>Dan Dugger</a>, <em>Combinatorial model categories have presentations</em> (<a href='http://arxiv.org/abs/math/0007068'>arXiv</a>), Adv. Math. 164 (2001), no. 1, 177-201</p>
+<p><a class='existingWikiWord' href='/nlab/show/Daniel+Dugger'>Dan Dugger</a>, <em>Combinatorial model categories have presentations</em>, Adv. Math. 164 (2001), no. 1, 177-201 (<a href='http://arxiv.org/abs/math/0007068'>arXiv:math/0007068</a>)</p>
 
 <p><strong>Abstract</strong> <em>We show that every combinatorial model category can be obtained, up to Quillen equivalence, by localizing a model category of diagrams of simplicial sets. This says that any combinatorial model category can be built up from a category of “generators” and a set of “relations” — that is, any combinatorial model category has a presentation.</em></p>
 </li>
@@ -324,8 +323,8 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Daniel+Dugger'>Dan Dugger</a>, <em><a class='existingWikiWord' href='/nlab/show/Universal+Homotopy+Theories'>Universal homotopy theories</a></em></li>
 </ul>
 
-<p>This shows that, up to <a class='existingWikiWord' href='/nlab/show/Quillen+equivalence'>Quillen equivalence</a>, every <a class='existingWikiWord' href='/nlab/show/combinatorial+model+category'>combinatorial model category</a> <math class='maruku-mathml' display='inline' id='mathml_b97dd15856ecea68339ff72c84a6f6adca22a0e6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> arises as the <a class='existingWikiWord' href='/nlab/show/Bousfield+localization+of+model+categories'>left Bousfield localization</a> of the global projective <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+presheaves'>model structure on simplicial presheaves</a> <math class='maruku-mathml' display='inline' id='mathml_b97dd15856ecea68339ff72c84a6f6adca22a0e6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Quillen</mi></msub><msub><mo stretchy='false'>]</mo> <mi>proj</mi></msub></mrow><annotation encoding='application/x-tex'>[C^{op}, sSet_{Quillen}]_{proj}</annotation></semantics></math>, for some <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> <math class='maruku-mathml' display='inline' id='mathml_b97dd15856ecea68339ff72c84a6f6adca22a0e6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b97dd15856ecea68339ff72c84a6f6adca22a0e6_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>≃</mo><mo stretchy='false'>[</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Quillen</mi></msub><msub><mo stretchy='false'>]</mo> <mrow><mi>proj</mi><mo>,</mo><mi>loc</mi></mrow></msub><mover><munder><mo>→</mo><mrow></mrow></munder><mover><mo>←</mo><mrow></mrow></mover></mover><mo stretchy='false'>[</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Quillen</mi></msub><msub><mo stretchy='false'>]</mo> <mi>proj</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>This shows that, up to <a class='existingWikiWord' href='/nlab/show/Quillen+equivalence'>Quillen equivalence</a>, every <a class='existingWikiWord' href='/nlab/show/combinatorial+model+category'>combinatorial model category</a> <math class='maruku-mathml' display='inline' id='mathml_91fc1f636558e56a65ca325a24fd8ec24df0f111_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> arises as the <a class='existingWikiWord' href='/nlab/show/Bousfield+localization+of+model+categories'>left Bousfield localization</a> of the global projective <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+presheaves'>model structure on simplicial presheaves</a> <math class='maruku-mathml' display='inline' id='mathml_91fc1f636558e56a65ca325a24fd8ec24df0f111_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Quillen</mi></msub><msub><mo stretchy='false'>]</mo> <mi>proj</mi></msub></mrow><annotation encoding='application/x-tex'>[C^{op}, sSet_{Quillen}]_{proj}</annotation></semantics></math>, for some <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> <math class='maruku-mathml' display='inline' id='mathml_91fc1f636558e56a65ca325a24fd8ec24df0f111_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_91fc1f636558e56a65ca325a24fd8ec24df0f111_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>≃</mo><mo stretchy='false'>[</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Quillen</mi></msub><msub><mo stretchy='false'>]</mo> <mrow><mi>proj</mi><mo>,</mo><mi>loc</mi></mrow></msub><mover><munder><mo>→</mo><mrow></mrow></munder><mover><mo>←</mo><mrow></mrow></mover></mover><mo stretchy='false'>[</mo><msup><mi>C</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Quillen</mi></msub><msub><mo stretchy='false'>]</mo> <mi>proj</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   A \simeq 
   [C^{op}, sSet_{Quillen}]_{proj, loc}
   \stackrel{\overset{}{\leftarrow}}{\underset{}{\to}}
@@ -341,12 +340,12 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>that the full <a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched</a> subcategories <math class='maruku-mathml' display='inline' id='mathml_b97dd15856ecea68339ff72c84a6f6adca22a0e6_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>A</mi> <mo>∘</mo></msup></mrow><annotation encoding='application/x-tex'>A^\circ</annotation></semantics></math> of these on fibrant-cofibrant objects are the <a class='existingWikiWord' href='/nlab/show/locally+presentable+%28infinity%2C1%29-category'>locally presentable (∞,1)-categories</a>;</p>
+<p>that the full <a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched</a> subcategories <math class='maruku-mathml' display='inline' id='mathml_91fc1f636558e56a65ca325a24fd8ec24df0f111_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>A</mi> <mo>∘</mo></msup></mrow><annotation encoding='application/x-tex'>A^\circ</annotation></semantics></math> of these on fibrant-cofibrant objects are the <a class='existingWikiWord' href='/nlab/show/locally+presentable+%28infinity%2C1%29-category'>locally presentable (∞,1)-categories</a>;</p>
 </li>
 
 <li>
 <p>that under this correspondence the global <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+presheaves'>model structure on simplicial presheaves</a> models the corresponding <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+of+%28infinity%2C1%29-presheaves'>(∞,1)-category of (∞,1)-presheaves</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b97dd15856ecea68339ff72c84a6f6adca22a0e6_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>PSh</mi> <mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow></msub><mo stretchy='false'>(</mo><mi>C</mi><mo stretchy='false'>)</mo><mo>≃</mo><msup><mi>A</mi> <mo>∘</mo></msup><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_91fc1f636558e56a65ca325a24fd8ec24df0f111_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>PSh</mi> <mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow></msub><mo stretchy='false'>(</mo><mi>C</mi><mo stretchy='false'>)</mo><mo>≃</mo><msup><mi>A</mi> <mo>∘</mo></msup><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   PSh_{(\infty,1)}(C)
   \simeq
   A^{\circ}
@@ -355,14 +354,14 @@ margin-left: 0em;
 </annotation></semantics></math></div></li>
 </ul>
 
-<p>Under this correspondence, Dugger’s theorem is precisely the <a class='existingWikiWord' href='/nlab/show/model+category'>model category</a>-theoretic analog of the theorem that every <a class='existingWikiWord' href='/nlab/show/locally+presentable+%28infinity%2C1%29-category'>locally presentable (∞,1)-category</a> <math class='maruku-mathml' display='inline' id='mathml_b97dd15856ecea68339ff72c84a6f6adca22a0e6_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/localization+of+an+%28infinity%2C1%29-category'>(∞,1)-categorical localization</a> of an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+of+%28infinity%2C1%29-presheaves'>(∞,1)-category of (∞,1)-presheaves</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b97dd15856ecea68339ff72c84a6f6adca22a0e6_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mover><munder><mo>↪</mo><mrow></mrow></munder><mover><mo>←</mo><mi>L</mi></mover></mover><msub><mi>PSh</mi> <mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow></msub><mo stretchy='false'>(</mo><mi>C</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>Under this correspondence, <a class='existingWikiWord' href='/nlab/show/Dugger%27s+theorem'>Dugger&#39;s theorem</a> is precisely the <a class='existingWikiWord' href='/nlab/show/model+category'>model category</a>-theoretic analog of the theorem that every <a class='existingWikiWord' href='/nlab/show/locally+presentable+%28infinity%2C1%29-category'>locally presentable (∞,1)-category</a> <math class='maruku-mathml' display='inline' id='mathml_91fc1f636558e56a65ca325a24fd8ec24df0f111_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/localization+of+an+%28infinity%2C1%29-category'>(∞,1)-categorical localization</a> of an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+of+%28infinity%2C1%29-presheaves'>(∞,1)-category of (∞,1)-presheaves</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_91fc1f636558e56a65ca325a24fd8ec24df0f111_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mover><munder><mo>↪</mo><mrow></mrow></munder><mover><mo>←</mo><mi>L</mi></mover></mover><msub><mi>PSh</mi> <mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow></msub><mo stretchy='false'>(</mo><mi>C</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   D \stackrel{\overset{L}{\leftarrow}}{\underset{}{\hookrightarrow}}
   PSh_{(\infty,1)}(C)
   \,.
 
 </annotation></semantics></math></div>
-<p>This <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> theortic interpretation of Dugger’s theorem is proposition A.3.7.6 in</p>
+<p>This <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a> theortic interpretation of <a class='existingWikiWord' href='/nlab/show/Dugger%27s+theorem'>Dugger&#39;s theorem</a> is proposition A.3.7.6 in</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Jacob+Lurie'>Jacob Lurie</a>, <em><a class='existingWikiWord' href='/nlab/show/Higher+Topos+Theory'>Higher Topos Theory</a></em></li>
@@ -372,19 +371,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 19, 2014 18:56:05 
-  by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
-  (129.127.252.10)
+  <p>
+  Last revised on July  5, 2018 at 13:16:59.
+  See the <a href="https://ncatlab.org/nlab/history/Combinatorial model categories have presentations" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Combinatorial+model+categories+have+presentations" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Combinatorial+model+categories+have+presentations/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Combinatorial+model+categories+have+presentations" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Combinatorial+model+categories+have+presentations" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Combinatorial+model+categories+have+presentations" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Combinatorial+model+categories+have+presentations/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Combinatorial+model+categories+have+presentations" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Combinatorial+model+categories+have+presentations" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Combinatorial model categories have presentations/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Combinatorial+model+categories+have+presentations" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Combinatorial+model+categories+have+presentations" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Combinatorial+model+categories+have+presentations" id="view_source" rel="nofollow">Source</a>
