--- a/pages/5436.html
+++ b/pages/5436.html
@@ -307,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>The area conventionally called <em>applied mathematics</em> is not the central focus of the <math class='maruku-mathml' display='inline' id='mathml_568aeb4999dd4514ab79f670f4668fae941daad4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab: our main focus is in (higher) category theory, <a class='existingWikiWord' href='/nlab/show/sheaf'>sheaves</a>, <a class='existingWikiWord' href='/nlab/show/stack'>stack</a>s, <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy</a> and (co)homological methods, foundations, <a class='existingWikiWord' href='/nlab/show/topology'>topology</a>, <a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a> and modern geometry as well as mathematical physics and philosophical aspects.</p>
+    <p>The area conventionally called <em>applied mathematics</em> is not the central focus of the <math class='maruku-mathml' display='inline' id='mathml_a18d0b828c147e0ee0cd296606076b7838b7cc90_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab: our main focus is in (higher) category theory, <a class='existingWikiWord' href='/nlab/show/sheaf'>sheaves</a>, <a class='existingWikiWord' href='/nlab/show/stack'>stack</a>s, <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy</a> and (co)homological methods, foundations, <a class='existingWikiWord' href='/nlab/show/topology'>topology</a>, <a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a> and modern geometry as well as mathematical physics and philosophical aspects.</p>
 
 <p>Unfortunately, there is a problem in defining what applied mathematics is, and many mathematicians disagree about the range. Some, including <a class='existingWikiWord' href='/nlab/show/Henri+Poincar%C3%A9'>Henri Poincaré</a> and <a class='existingWikiWord' href='/nlab/show/Vladimir+Arnold'>Vladimir Arnol&#39;d</a>, said that</p>
 
@@ -349,6 +349,8 @@ margin-left: 0em;
 
 <p>Wikipedia: <a href='http://en.wikipedia.org/wiki/Applied_mathematics'>applied mathematics</a></p>
 
+<p>As, if and when applications of the nPOV to areas traditionally called ‘applied mathematics’, we cordially invite practitioners to contribute se that those developments may be recorded and developed here. Recent developments of category theoretical methods and insights to areas of Chemistry and Biology are being discussed in <a href='https://johncarlosbaez.wordpress.com/'>Azimuth</a>.</p>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/applications'>applications</a></div> 
  
  
@@ -357,14 +359,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July  5, 2018 at 15:39:12.
+  Last revised on July  6, 2018 at 01:43:11.
   See the <a href="https://ncatlab.org/nlab/history/applied mathematics" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/applied+mathematics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/applied+mathematics/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/applied+mathematics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/applied+mathematics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/applied+mathematics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/applied+mathematics/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/applied+mathematics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/applied+mathematics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/applied mathematics/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
