--- a/pages/5375.html
+++ b/pages/5375.html
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8573/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/2206/#Item_20" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -469,11 +469,11 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#tale_homotopy_types'>Étale homotopy types</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <em>anabelian geometry</em> one studies how much information about a <a class='existingWikiWord' href='/nlab/show/space'>space</a> <math class='maruku-mathml' display='inline' id='mathml_08b7703baa8008720c2e84aa785f6b0f7f72f9c2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> (specifically: an <a class='existingWikiWord' href='/nlab/show/algebraic+variety'>algebraic variety</a>) is contained already in its first <a class='existingWikiWord' href='/nlab/show/%C3%A9tale+homotopy'>étale homotopy group</a> <math class='maruku-mathml' display='inline' id='mathml_08b7703baa8008720c2e84aa785f6b0f7f72f9c2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>et</mi></msubsup><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi^{et}_1(X,x)</annotation></semantics></math> (specifically: the <a class='existingWikiWord' href='/nlab/show/algebraic+fundamental+group'>algebraic fundamental group</a>).</p>
+<p>In <em>anabelian geometry</em> one studies how much information about a <a class='existingWikiWord' href='/nlab/show/space'>space</a> <math class='maruku-mathml' display='inline' id='mathml_4902a9c3204082e9bc8ea7fb93942eaa8d88f0c0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> (specifically: an <a class='existingWikiWord' href='/nlab/show/algebraic+variety'>algebraic variety</a>) is contained already in its first <a class='existingWikiWord' href='/nlab/show/%C3%A9tale+homotopy'>étale homotopy group</a> <math class='maruku-mathml' display='inline' id='mathml_4902a9c3204082e9bc8ea7fb93942eaa8d88f0c0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>et</mi></msubsup><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi^{et}_1(X,x)</annotation></semantics></math> (specifically: the <a class='existingWikiWord' href='/nlab/show/algebraic+fundamental+group'>algebraic fundamental group</a>).</p>
 
-<p>The term “anabelian” is supposed to be alluding to the fact that “the <em>less</em> <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian</a> <math class='maruku-mathml' display='inline' id='mathml_08b7703baa8008720c2e84aa785f6b0f7f72f9c2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>et</mi></msubsup><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi^{et}_1(X,x)</annotation></semantics></math> is, the more information it carries about <math class='maruku-mathml' display='inline' id='mathml_08b7703baa8008720c2e84aa785f6b0f7f72f9c2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.” Precisely: an <a class='existingWikiWord' href='/nlab/show/anabelian+group'>anabelian group</a> is a non-<a class='existingWikiWord' href='/nlab/show/trivial+group'>trivial group</a> for which every <a class='existingWikiWord' href='/nlab/show/index+of+a+subgroup'>finite index subgroup</a> has trivial <a class='existingWikiWord' href='/nlab/show/center'>center</a>.</p>
+<p>The term “anabelian” is supposed to be alluding to the fact that “the <em>less</em> <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian</a> <math class='maruku-mathml' display='inline' id='mathml_4902a9c3204082e9bc8ea7fb93942eaa8d88f0c0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>et</mi></msubsup><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi^{et}_1(X,x)</annotation></semantics></math> is, the more information it carries about <math class='maruku-mathml' display='inline' id='mathml_4902a9c3204082e9bc8ea7fb93942eaa8d88f0c0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>.” Precisely: an <a class='existingWikiWord' href='/nlab/show/anabelian+group'>anabelian group</a> is a non-<a class='existingWikiWord' href='/nlab/show/trivial+group'>trivial group</a> for which every <a class='existingWikiWord' href='/nlab/show/index+of+a+subgroup'>finite index subgroup</a> has trivial <a class='existingWikiWord' href='/nlab/show/center'>center</a>.</p>
 
-<p>Accordingly, an algebraic variety whose <a class='existingWikiWord' href='/nlab/show/decategorification'>isomorphism class</a> is entirely determined by <math class='maruku-mathml' display='inline' id='mathml_08b7703baa8008720c2e84aa785f6b0f7f72f9c2_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>et</mi></msubsup><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi^{et}_1(X,x)</annotation></semantics></math> is called an <strong>anabelian variety</strong>.</p>
+<p>Accordingly, an algebraic variety whose <a class='existingWikiWord' href='/nlab/show/decategorification'>isomorphism class</a> is entirely determined by <math class='maruku-mathml' display='inline' id='mathml_4902a9c3204082e9bc8ea7fb93942eaa8d88f0c0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>et</mi></msubsup><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\pi^{et}_1(X,x)</annotation></semantics></math> is called an <strong>anabelian variety</strong>.</p>
 
 <p>An early conjecture motivating the theory (in <a href='#Grothendieck'>Grothendieck 84</a>) was that all <a class='existingWikiWord' href='/nlab/show/hyperbolic+curves'>hyperbolic curves</a> over <a class='existingWikiWord' href='/nlab/show/number+field'>number fields</a> are anabelian varieties. This was eventually proven by various authors in various cases. In (<a href='#Uchida'>Uchida</a>) and (<a href='#Neukirch'>Neukirch</a>) it was shown that an isomorphism between <a class='existingWikiWord' href='/nlab/show/Galois+group'>Galois groups</a> of <a class='existingWikiWord' href='/nlab/show/number+field'>number fields</a> implies the existence of an isomorphism between those number fields. For algebraic curves over <a class='existingWikiWord' href='/nlab/show/finite+field'>finite fields</a>, over <a class='existingWikiWord' href='/nlab/show/number+field'>number fields</a> and over <a class='existingWikiWord' href='/nlab/show/p-adic+number'>p-adic field</a> the statement was eventually completed by (<a href='#Mochizuki96'>Mochizuki 96</a>).</p>
 
@@ -525,7 +525,11 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Alexander+Grothendieck'>Alexandre Grothendieck</a>, letter to Faltings (June 27, 1983) (<a href='http://www.math.jussieu.fr/~leila/grothendieckcircle/GtoF.pdf'>pdf</a>),</li>
 </ul>
 
-<p>written in response to <a class='existingWikiWord' href='/nlab/show/Gerd+Faltings'>Faltings</a>’ work on the <a class='existingWikiWord' href='/nlab/show/Mordell+conjecture'>Mordell Conjecture</a>.</p>
+<p>written in response to <a class='existingWikiWord' href='/nlab/show/Gerd+Faltings'>Faltings</a>’ work on the <a class='existingWikiWord' href='/nlab/show/Mordell+conjecture'>Mordell Conjecture</a>. And in</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Alexander+Grothendieck'>Alexandre Grothendieck</a>, La Longue Marche à travers la Théorie de Galois (<a href='https://github.com/gcarmonamateo/LaLongueMarche'>link</a>).</li>
+</ul>
 
 <p>There is some discussion of the area in</p>
 
@@ -566,7 +570,7 @@ margin-left: 0em;
 <p>The classification of anabelian varieties for <a class='existingWikiWord' href='/nlab/show/number+field'>number fields</a> was shown in</p>
 
 <ul id='Neukirch'>
-<li>J. Neukirch, <em>Kennzeichnung der <math class='maruku-mathml' display='inline' id='mathml_08b7703baa8008720c2e84aa785f6b0f7f72f9c2_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-adischen und der endlichen algebraischen Zahlkörper</em>, Invent. Math. 6 (1969), p. 296–314.</li>
+<li>J. Neukirch, <em>Kennzeichnung der <math class='maruku-mathml' display='inline' id='mathml_4902a9c3204082e9bc8ea7fb93942eaa8d88f0c0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>-adischen und der endlichen algebraischen Zahlkörper</em>, Invent. Math. 6 (1969), p. 296–314.</li>
 </ul>
 
 <ul>
@@ -620,14 +624,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on May 31, 2018 at 02:19:43.
+  Last revised on July  6, 2018 at 13:02:20.
   See the <a href="https://ncatlab.org/nlab/history/anabelian geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/anabelian+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anabelian+geometry/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/anabelian+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anabelian+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/anabelian+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anabelian+geometry/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/anabelian+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anabelian+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/anabelian geometry/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
