--- a/pages/15738.html
+++ b/pages/15738.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/6215/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6215/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -905,6 +905,28 @@ margin-left: 0em;
 
 <p>Surveys include <a href='#Uzan'>Uzan, section 5.3.1</a></p>
 
+<p>From <a href='#EllisWells15'>Ellis-Wells 15, p. 2</a>:</p>
+
+<blockquote>
+<p>Famously, the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>Standard Model</a> (SM) does not unify under that rubric but the <a class='existingWikiWord' href='/nlab/show/MSSM'>Minimal Supersymmetric Standard Model</a> (MSSM) does according to many [1–7]. However, neither statement is true. The SM cannot be ruled out as the IR manifestation of a <a class='existingWikiWord' href='/nlab/show/GUT'>Grand Unified Theory</a> (GUT), nor do the three gauge couplings meet at precisely one point in the MSSM. The key to understanding both claims is that high-scale thresholds are generically expected, which are the multiplets at the high scale that get masses by the same mechanism that breaks the GUT symmetry. High-scale threshold corrections kick the couplings further into exact unification if the underlying theory is gauge-coupling unified.</p>
+</blockquote>
+
+<p>and further from <a href='#EllisWells17'>Ellis-Wells 17, p. 23 to 26</a>:</p>
+
+<blockquote>
+<p>Thus, even the Standard Model up to the high scale is compatible with gauge coupling unification from this perspective, although the corrections becomes quite large in that case, and one has to ask whether nature would rather have large corrections at the GUT scale for a SM GUT or very small corrections for a low-scale SUSY GUT.</p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_351d041b25679a9429634c8b0f87f10ab46dda86_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[...]</annotation></semantics></math> the introduction of supersymmetry both reduces the needed threshold corrections at the high-scale and increases the GUT scale <math class='maruku-mathml' display='inline' id='mathml_351d041b25679a9429634c8b0f87f10ab46dda86_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[...]</annotation></semantics></math>. This latter element is helpful since one generally requires that the GUT scale be above about <math class='maruku-mathml' display='inline' id='mathml_351d041b25679a9429634c8b0f87f10ab46dda86_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>15</mn></msup></mrow><annotation encoding='application/x-tex'>10^{15}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a> so that the <math class='maruku-mathml' display='inline' id='mathml_351d041b25679a9429634c8b0f87f10ab46dda86_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>,<math class='maruku-mathml' display='inline' id='mathml_351d041b25679a9429634c8b0f87f10ab46dda86_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi></mrow><annotation encoding='application/x-tex'>Y</annotation></semantics></math> GUT gauge bosons do not induce too large dimension-six operators that cause the <a class='existingWikiWord' href='/nlab/show/proton+decay'>proton to decay</a> faster than current limits allow.</p>
+
+<p>Thus, exact gauge coupling unification is viable for intermediate values of supersymmetry breaking, which are also compatible with the Higgs boson mass constraint.</p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_351d041b25679a9429634c8b0f87f10ab46dda86_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mo>.</mo><mo>.</mo><mo>.</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[...]</annotation></semantics></math></p>
+
+<p>One important experimental prediction of minimal supersymmetry, even for superpartners at very high scales, is the existence of a relatively light <a class='existingWikiWord' href='/nlab/show/Higgs+boson'>Higgs boson</a>. This has been seen by the LHC. We have shown in this paper that even arbitrary high scales of super-partners allow the light Higgs boson, due to the required matching of the SM effective theory Higgs self-interaction coupling to gauge couplings in the supersymmetric theory.</p>
+
+<p>We have discussed how gauge coupling unification generally only improves in a supersymmetric theory, even at very high scales, with respect to the SM. Thus, we find that PeV scale [23–27] or intermediate scale supersymmetry [3, 5], two ideas that are prevalent in the literature for other reasons involving dark matter and neutrino physics, are compatible with the Higgs boson constraint and gauge coupling unification under the conditions described above.</p>
+</blockquote>
+
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
@@ -938,8 +960,12 @@ margin-left: 0em;
 <p>Jean-Philippe Uzan, section 5.3.1 of <em>Varying Constants, Gravitation and Cosmology</em>, Living Reviews in Relativity (<a href='https://arxiv.org/abs/1009.5514'>arXiv:1009.5514</a>)</p>
 </li>
 
-<li>
-<p>Sebastian A. R. Ellis, James D. Wells, <em>Visualizing gauge unification with high-scale thresholds</em>, Phys. Rev. D 91, 075016 (2015) (<a href='https://arxiv.org/abs/1502.01362'>arXiv:1502.01362</a>)</p>
+<li id='EllisWells15'>
+<p>Sebastian A. R. Ellis, <a class='existingWikiWord' href='/nlab/show/James+Wells'>James Wells</a>, <em>Visualizing gauge unification with high-scale thresholds</em>, Phys. Rev. D 91, 075016 (2015) (<a href='https://arxiv.org/abs/1502.01362'>arXiv:1502.01362</a>)</p>
+</li>
+
+<li id='EllisWells17'>
+<p>Sebastian A. R. Ellis, <a class='existingWikiWord' href='/nlab/show/James+Wells'>James Wells</a>, <em>High-scale Supersymmetry, the Higgs Mass and Gauge Unification</em>, Phys. Rev. D 96, 055024 (2017) (<a href='https://arxiv.org/abs/1706.00013'>arXiv:1706.00013</a>)</p>
 </li>
 </ul>
 
@@ -962,14 +988,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July  6, 2018 at 14:05:01.
+  Last revised on July  7, 2018 at 06:58:34.
   See the <a href="https://ncatlab.org/nlab/history/gauge coupling unification" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/gauge+coupling+unification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gauge+coupling+unification/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/gauge+coupling+unification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gauge+coupling+unification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/gauge+coupling+unification" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gauge+coupling+unification/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/gauge+coupling+unification" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gauge+coupling+unification" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/gauge coupling unification/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
